QProxyStyle doesn't support nested QProxyStyles

A temporary solution is to not initialize the collapsible groupbox style
with the current style.
See Issue #24279
https://bugreports.qt-project.org/browse/QTBUG-24279